# rnnoise-cmake

./: CMakeLists.txt
include/: rnnoise.h
src/: kiss_fft.c
